[project]
name = "swarm-sandbox"
version = "0.1.0"
description = "群知能シミュレーション・スイート"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "matplotlib",
    # 他の依存関係
]

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = ["build", "dist"]

[tool.isort]
profile = "black"
line_length = 88
skip = ["build", "dist"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
extend-exclude = ["build", "dist"]
