[project]
name = "swarm-sandbox"
version = "0.1.0"
description = "群知能シミュレーション・スイート"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy",
    "pre-commit",
]

[project.optional-dependencies]
viz = [
  "matplotlib>=3.8",
  # 必要なら "imageio>=2.34" なども
]

[tool.black]
line-length = 88
target-version = ["py310"]
extend-exclude = ["build", "dist"]

[tool.isort]
profile = "black"
line_length = 88
skip = ["build", "dist"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
extend-exclude = ["build", "dist"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5",
]
